--- a/facebook/test/fixtures/posts.yml
+++ b/facebook/test/fixtures/posts.yml
@@ -1,9 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  text: MyText
+  title: MyText
+  description: MyText
+  link: MyString
+  message: MyText
+  picture: MyString
 
 two:
-  title: MyString
-  text: MyText
+  title: MyText
+  description: MyText
+  link: MyString
+  message: MyText
+  picture: MyString
